[project]
name = "tools-rag"
version = "1.0.0"
description = "Hybrid Retrieval-Augmented Generation (RAG) system for intelligent tool selection in LLM applications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rank-bm25",
    "chromadb",
    "sentence-transformers",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tools_rag"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "pylint>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tools_rag/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["tools_rag/src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

